--- a/src/Scraping_pm2.ipynb
+++ b/src/Scraping_pm2.ipynb
@@ -1792,13 +1792,7 @@
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "\n",
-      "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       " 54%|███████████████████▍                | 832/1539 [2:16:00<1:59:04, 10.11s/it]\u001b[A/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
@@ -5277,13 +5271,7 @@
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "\n",
-      "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       " 30%|██████████▊                         | 464/1539 [1:15:59<2:59:49, 10.04s/it]\u001b[A/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
@@ -5740,13 +5728,7 @@
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "\n",
-      "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       " 54%|███████████████████▍                | 832/1539 [2:17:20<1:58:27, 10.05s/it]\u001b[A/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "/var/folders/jp/yhf41mgn0cdf11bv_9bsyftm0000gn/T/ipykernel_1108/4090227401.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
@@ -9118,7 +9100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "id": "c3ccc68b",
    "metadata": {},
    "outputs": [],
@@ -9128,7 +9110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "id": "d1a1f92b",
    "metadata": {},
    "outputs": [],
@@ -9138,8 +9120,320 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "97196209",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv('../data/BOE_def.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e3ae7961",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6154 entries, 0 to 6153\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   identificador         6154 non-null   object\n",
+      " 1   tipo_de_subasta       6154 non-null   object\n",
+      " 2   cuenta_expediente     6154 non-null   object\n",
+      " 3   fecha_de_inicio       6154 non-null   object\n",
+      " 4   fecha_de_conclusion   6154 non-null   object\n",
+      " 5   cantidad_reclamada    6154 non-null   int64 \n",
+      " 6   anuncio_BOE           6154 non-null   object\n",
+      " 7   valor_subasta         6154 non-null   int64 \n",
+      " 8   tasacion              6154 non-null   int64 \n",
+      " 9   puja_minima           6154 non-null   int64 \n",
+      " 10  tramos_entre_pujas    6154 non-null   int64 \n",
+      " 11  importe_del_deposito  6154 non-null   int64 \n",
+      " 12  direccion             6154 non-null   object\n",
+      " 13  codigo_postal         6154 non-null   int64 \n",
+      " 14  localidad             6154 non-null   object\n",
+      " 15  provincia             6154 non-null   object\n",
+      " 16  puja                  6154 non-null   int64 \n",
+      " 17  pm2                   6154 non-null   int64 \n",
+      "dtypes: int64(9), object(9)\n",
+      "memory usage: 865.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ec043aeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Valencia/València', 'Madrid', 'Málaga', 'Sevilla', 'Las Palmas',\n",
+       "       'Barcelona', 'Huesca', 'Almería', 'Albacete',\n",
+       "       'Santa Cruz de Tenerife', 'Ciudad Real', 'Asturias', 'Huelva',\n",
+       "       'Illes Balears', 'Navarra', 'Jaén', 'Zaragoza', 'Cáceres',\n",
+       "       'Alicante/Alacant', 'Cádiz', 'Bizkaia', 'Valencia', 'Lugo', 'León',\n",
+       "       'A Coruña', 'Pontevedra', 'Girona', 'Valladolid', 'Gipuzkoa',\n",
+       "       'La Rioja', 'Lleida', 'Tarragona', 'Castellón/Castelló', 'Ourense',\n",
+       "       'Badajoz', 'Murcia', 'Zamora', 'Granada', 'Soria', 'Cantabria',\n",
+       "       'Toledo', 'Araba/Álava', 'Salamanca', 'Gerona', 'Castellón',\n",
+       "       'Córdoba', 'Guadalajara', 'Palencia', 'Lérida', 'Ceuta', 'Burgos',\n",
+       "       'Melilla', 'Alicante', 'Teruel', 'Baleares', 'Cuenca', 'Segovia',\n",
+       "       'Ávila', 'Vizcaya', 'Orense', 'Guipúzcoa', 'La Coruña', 'Álava'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.provincia.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2434b3bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creamos new colum con la diferencia entre la deuda(cantidad_reclamada) y el valor que le da el juez(valor_subasta)\n",
+    "df['difference'] = df['valor_subasta'].sub(df['cantidad_reclamada'], axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9d4d2191",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>identificador</th>\n",
+       "      <th>tipo_de_subasta</th>\n",
+       "      <th>cuenta_expediente</th>\n",
+       "      <th>fecha_de_inicio</th>\n",
+       "      <th>fecha_de_conclusion</th>\n",
+       "      <th>cantidad_reclamada</th>\n",
+       "      <th>anuncio_BOE</th>\n",
+       "      <th>valor_subasta</th>\n",
+       "      <th>tasacion</th>\n",
+       "      <th>puja_minima</th>\n",
+       "      <th>tramos_entre_pujas</th>\n",
+       "      <th>importe_del_deposito</th>\n",
+       "      <th>direccion</th>\n",
+       "      <th>codigo_postal</th>\n",
+       "      <th>localidad</th>\n",
+       "      <th>provincia</th>\n",
+       "      <th>puja</th>\n",
+       "      <th>pm2</th>\n",
+       "      <th>difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SUB-JA-2022-204013</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>4743 0000 05 1018 20</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>7145</td>\n",
+       "      <td>BOE-B-2022-35270</td>\n",
+       "      <td>108482</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2169</td>\n",
+       "      <td>5424</td>\n",
+       "      <td>Urbanización Els Racons nº 5. partida Michafiga</td>\n",
+       "      <td>46220</td>\n",
+       "      <td>Picassent</td>\n",
+       "      <td>Valencia/València</td>\n",
+       "      <td>58580</td>\n",
+       "      <td>1088</td>\n",
+       "      <td>101337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SUB-JA-2022-196067</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>2368 0000 06 0191 20</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>142298</td>\n",
+       "      <td>BOE-B-2022-35269</td>\n",
+       "      <td>305832</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6116</td>\n",
+       "      <td>15291</td>\n",
+       "      <td>CALLE GABRIEL GARCÍA MÁRQUEZ, 31</td>\n",
+       "      <td>28980</td>\n",
+       "      <td>PARLA</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>177382</td>\n",
+       "      <td>1721</td>\n",
+       "      <td>163534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SUB-JA-2022-204060</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>2995 0000 06 0456 16</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>55933</td>\n",
+       "      <td>BOE-B-2022-35263</td>\n",
+       "      <td>247902</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12395</td>\n",
+       "      <td>VIVIENDA 1 BLOQUE 19 CONJUNTO RESIDENCIAL HACI...</td>\n",
+       "      <td>29600</td>\n",
+       "      <td>Marbella</td>\n",
+       "      <td>Málaga</td>\n",
+       "      <td>252000</td>\n",
+       "      <td>1721</td>\n",
+       "      <td>191969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SUB-JA-2022-198972</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>3997 0000 06 1661 20</td>\n",
+       "      <td>27-09-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>210425</td>\n",
+       "      <td>BOE-B-2022-28879</td>\n",
+       "      <td>826272</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16525</td>\n",
+       "      <td>41313</td>\n",
+       "      <td>AVENIDA DE JACARANDA, 5, URBANIZACION CLUB DE ...</td>\n",
+       "      <td>41930</td>\n",
+       "      <td>BORMUJOS</td>\n",
+       "      <td>Sevilla</td>\n",
+       "      <td>512288</td>\n",
+       "      <td>1557</td>\n",
+       "      <td>615847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SUB-JA-2022-203383</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>5418 0000 06 0169 21</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>07-12-2022</td>\n",
+       "      <td>34853</td>\n",
+       "      <td>BOE-B-2022-35253</td>\n",
+       "      <td>121684</td>\n",
+       "      <td>121684</td>\n",
+       "      <td>45978</td>\n",
+       "      <td>2433</td>\n",
+       "      <td>6084</td>\n",
+       "      <td>Calle Palma de Mallorca, nº 13, bloque 19, 3º ...</td>\n",
+       "      <td>35016</td>\n",
+       "      <td>Las Palmas de Gran Canaria</td>\n",
+       "      <td>Las Palmas</td>\n",
+       "      <td>45978</td>\n",
+       "      <td>1130</td>\n",
+       "      <td>86831</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        identificador             tipo_de_subasta     cuenta_expediente  \\\n",
+       "0  SUB-JA-2022-204013  JUDICIAL EN VÍA DE APREMIO  4743 0000 05 1018 20   \n",
+       "1  SUB-JA-2022-196067  JUDICIAL EN VÍA DE APREMIO  2368 0000 06 0191 20   \n",
+       "2  SUB-JA-2022-204060  JUDICIAL EN VÍA DE APREMIO  2995 0000 06 0456 16   \n",
+       "3  SUB-JA-2022-198972  JUDICIAL EN VÍA DE APREMIO  3997 0000 06 1661 20   \n",
+       "4  SUB-JA-2022-203383  JUDICIAL EN VÍA DE APREMIO  5418 0000 06 0169 21   \n",
+       "\n",
+       "  fecha_de_inicio fecha_de_conclusion  cantidad_reclamada       anuncio_BOE  \\\n",
+       "0      17-11-2022          08-12-2022                7145  BOE-B-2022-35270   \n",
+       "1      17-11-2022          08-12-2022              142298  BOE-B-2022-35269   \n",
+       "2      17-11-2022          08-12-2022               55933  BOE-B-2022-35263   \n",
+       "3      27-09-2022          08-12-2022              210425  BOE-B-2022-28879   \n",
+       "4      17-11-2022          07-12-2022               34853  BOE-B-2022-35253   \n",
+       "\n",
+       "   valor_subasta  tasacion  puja_minima  tramos_entre_pujas  \\\n",
+       "0         108482         0            0                2169   \n",
+       "1         305832         0            0                6116   \n",
+       "2         247902         0            0                   0   \n",
+       "3         826272         0            0               16525   \n",
+       "4         121684    121684        45978                2433   \n",
+       "\n",
+       "   importe_del_deposito                                          direccion  \\\n",
+       "0                  5424    Urbanización Els Racons nº 5. partida Michafiga   \n",
+       "1                 15291                   CALLE GABRIEL GARCÍA MÁRQUEZ, 31   \n",
+       "2                 12395  VIVIENDA 1 BLOQUE 19 CONJUNTO RESIDENCIAL HACI...   \n",
+       "3                 41313  AVENIDA DE JACARANDA, 5, URBANIZACION CLUB DE ...   \n",
+       "4                  6084  Calle Palma de Mallorca, nº 13, bloque 19, 3º ...   \n",
+       "\n",
+       "   codigo_postal                   localidad          provincia    puja   pm2  \\\n",
+       "0          46220                   Picassent  Valencia/València   58580  1088   \n",
+       "1          28980                       PARLA             Madrid  177382  1721   \n",
+       "2          29600                    Marbella             Málaga  252000  1721   \n",
+       "3          41930                    BORMUJOS            Sevilla  512288  1557   \n",
+       "4          35016  Las Palmas de Gran Canaria         Las Palmas   45978  1130   \n",
+       "\n",
+       "   difference  \n",
+       "0      101337  \n",
+       "1      163534  \n",
+       "2      191969  \n",
+       "3      615847  \n",
+       "4       86831  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c9373e8",
    "metadata": {},
    "outputs": [],
    "source": []
