--- a/src/MachineLearning_Modelo_Predictivo.ipynb
+++ b/src/MachineLearning_Modelo_Predictivo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "a536dc8e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b291b026",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "e51ca1fe",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "21bbd962",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "aae6ed77",
    "metadata": {},
    "outputs": [],
@@ -66,12 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "67739164",
    "metadata": {},
    "outputs": [],
    "source": [
-    "boe=pd.read_csv('../data/BOE_def.csv')"
+    "boe=pd.read_csv('../data/BOE_definitivo.csv')"
    ]
   },
   {
@@ -38876,26 +38876,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "4b5b11f7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(376866.0476294013, 0.41747671634422845)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'ctr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m##ctr\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m y_pred\u001b[38;5;241m=\u001b[39m\u001b[43mctr\u001b[49m\u001b[38;5;241m.\u001b[39mpredict(X_test)\n\u001b[1;32m      4\u001b[0m mse(y_test, y_pred, squared\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m), \n\u001b[1;32m      5\u001b[0m r2(y_test, y_pred)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ctr' is not defined"
+     ]
     }
    ],
    "source": [
     "##ctr\n",
     "y_pred=ctr.predict(X_test)\n",
     "\n",
-    "mse(y_test, y_pred, squared=False), r2(y_test, y_pred)  # RMSE"
+    "mse(y_test, y_pred, squared=False), \n",
+    "r2(y_test, y_pred)  # RMSE"
    ]
   },
   {
@@ -38916,10 +38918,10 @@
     }
    ],
    "source": [
-    "## lbbmr 87%\n",
+    "## Modelo lgbmr\n",
     "y_pred=lgbmr.predict(X_test)\n",
     "\n",
-    "mse(y_test, y_pred, squared=False), r2(y_test, y_pred)  # RMSE"
+    "mse(y_test, y_pred,  r2(y_test, y_pred) # RMSE"
    ]
   },
   {
@@ -57591,8 +57593,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8a2d1c18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>identificador</th>\n",
+       "      <th>tipo_de_subasta</th>\n",
+       "      <th>cuenta_expediente</th>\n",
+       "      <th>fecha_de_inicio</th>\n",
+       "      <th>fecha_de_conclusion</th>\n",
+       "      <th>cantidad_reclamada</th>\n",
+       "      <th>anuncio_BOE</th>\n",
+       "      <th>valor_subasta</th>\n",
+       "      <th>tasacion</th>\n",
+       "      <th>puja_minima</th>\n",
+       "      <th>tramos_entre_pujas</th>\n",
+       "      <th>importe_del_deposito</th>\n",
+       "      <th>direccion</th>\n",
+       "      <th>codigo_postal</th>\n",
+       "      <th>localidad</th>\n",
+       "      <th>provincia</th>\n",
+       "      <th>puja</th>\n",
+       "      <th>pm2</th>\n",
+       "      <th>difference</th>\n",
+       "      <th>prediccion_puja</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SUB-JA-2022-204013</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>4743 0000 05 1018 20</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>7145</td>\n",
+       "      <td>BOE-B-2022-35270</td>\n",
+       "      <td>108482</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2169</td>\n",
+       "      <td>5424</td>\n",
+       "      <td>Urbanización Els Racons nº 5. partida Michafiga</td>\n",
+       "      <td>46220</td>\n",
+       "      <td>Picassent</td>\n",
+       "      <td>Valencia/València</td>\n",
+       "      <td>58580</td>\n",
+       "      <td>1088</td>\n",
+       "      <td>101337</td>\n",
+       "      <td>53591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SUB-JA-2022-196067</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>2368 0000 06 0191 20</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>142298</td>\n",
+       "      <td>BOE-B-2022-35269</td>\n",
+       "      <td>305832</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6116</td>\n",
+       "      <td>15291</td>\n",
+       "      <td>CALLE GABRIEL GARCÍA MÁRQUEZ, 31</td>\n",
+       "      <td>28980</td>\n",
+       "      <td>PARLA</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>177382</td>\n",
+       "      <td>1721</td>\n",
+       "      <td>163534</td>\n",
+       "      <td>159333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SUB-JA-2022-204060</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>2995 0000 06 0456 16</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>55933</td>\n",
+       "      <td>BOE-B-2022-35263</td>\n",
+       "      <td>247902</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12395</td>\n",
+       "      <td>VIVIENDA 1 BLOQUE 19 CONJUNTO RESIDENCIAL HACI...</td>\n",
+       "      <td>29600</td>\n",
+       "      <td>Marbella</td>\n",
+       "      <td>Málaga</td>\n",
+       "      <td>252000</td>\n",
+       "      <td>1721</td>\n",
+       "      <td>191969</td>\n",
+       "      <td>130042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SUB-JA-2022-198972</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>3997 0000 06 1661 20</td>\n",
+       "      <td>27-09-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>210425</td>\n",
+       "      <td>BOE-B-2022-28879</td>\n",
+       "      <td>826272</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16525</td>\n",
+       "      <td>41313</td>\n",
+       "      <td>AVENIDA DE JACARANDA, 5, URBANIZACION CLUB DE ...</td>\n",
+       "      <td>41930</td>\n",
+       "      <td>BORMUJOS</td>\n",
+       "      <td>Sevilla</td>\n",
+       "      <td>512288</td>\n",
+       "      <td>1557</td>\n",
+       "      <td>615847</td>\n",
+       "      <td>400756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SUB-JA-2022-203383</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>5418 0000 06 0169 21</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>07-12-2022</td>\n",
+       "      <td>34853</td>\n",
+       "      <td>BOE-B-2022-35253</td>\n",
+       "      <td>121684</td>\n",
+       "      <td>121684</td>\n",
+       "      <td>45978</td>\n",
+       "      <td>2433</td>\n",
+       "      <td>6084</td>\n",
+       "      <td>Calle Palma de Mallorca, nº 13, bloque 19, 3º ...</td>\n",
+       "      <td>35016</td>\n",
+       "      <td>Las Palmas de Gran Canaria</td>\n",
+       "      <td>Las Palmas</td>\n",
+       "      <td>45978</td>\n",
+       "      <td>1130</td>\n",
+       "      <td>86831</td>\n",
+       "      <td>62614</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        identificador             tipo_de_subasta     cuenta_expediente  \\\n",
+       "0  SUB-JA-2022-204013  JUDICIAL EN VÍA DE APREMIO  4743 0000 05 1018 20   \n",
+       "1  SUB-JA-2022-196067  JUDICIAL EN VÍA DE APREMIO  2368 0000 06 0191 20   \n",
+       "2  SUB-JA-2022-204060  JUDICIAL EN VÍA DE APREMIO  2995 0000 06 0456 16   \n",
+       "3  SUB-JA-2022-198972  JUDICIAL EN VÍA DE APREMIO  3997 0000 06 1661 20   \n",
+       "4  SUB-JA-2022-203383  JUDICIAL EN VÍA DE APREMIO  5418 0000 06 0169 21   \n",
+       "\n",
+       "  fecha_de_inicio fecha_de_conclusion  cantidad_reclamada       anuncio_BOE  \\\n",
+       "0      17-11-2022          08-12-2022                7145  BOE-B-2022-35270   \n",
+       "1      17-11-2022          08-12-2022              142298  BOE-B-2022-35269   \n",
+       "2      17-11-2022          08-12-2022               55933  BOE-B-2022-35263   \n",
+       "3      27-09-2022          08-12-2022              210425  BOE-B-2022-28879   \n",
+       "4      17-11-2022          07-12-2022               34853  BOE-B-2022-35253   \n",
+       "\n",
+       "   valor_subasta  tasacion  puja_minima  tramos_entre_pujas  \\\n",
+       "0         108482         0            0                2169   \n",
+       "1         305832         0            0                6116   \n",
+       "2         247902         0            0                   0   \n",
+       "3         826272         0            0               16525   \n",
+       "4         121684    121684        45978                2433   \n",
+       "\n",
+       "   importe_del_deposito                                          direccion  \\\n",
+       "0                  5424    Urbanización Els Racons nº 5. partida Michafiga   \n",
+       "1                 15291                   CALLE GABRIEL GARCÍA MÁRQUEZ, 31   \n",
+       "2                 12395  VIVIENDA 1 BLOQUE 19 CONJUNTO RESIDENCIAL HACI...   \n",
+       "3                 41313  AVENIDA DE JACARANDA, 5, URBANIZACION CLUB DE ...   \n",
+       "4                  6084  Calle Palma de Mallorca, nº 13, bloque 19, 3º ...   \n",
+       "\n",
+       "   codigo_postal                   localidad          provincia    puja   pm2  \\\n",
+       "0          46220                   Picassent  Valencia/València   58580  1088   \n",
+       "1          28980                       PARLA             Madrid  177382  1721   \n",
+       "2          29600                    Marbella             Málaga  252000  1721   \n",
+       "3          41930                    BORMUJOS            Sevilla  512288  1557   \n",
+       "4          35016  Las Palmas de Gran Canaria         Las Palmas   45978  1130   \n",
+       "\n",
+       "   difference  prediccion_puja  \n",
+       "0      101337            53591  \n",
+       "1      163534           159333  \n",
+       "2      191969           130042  \n",
+       "3      615847           400756  \n",
+       "4       86831            62614  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boe.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d58f3ae1",
    "metadata": {},
    "outputs": [],
    "source": []
